# competitive-programming

./: .gitignore  template.cpp
codeforces/contest1/: blocks.cpp  finalists.cpp  pie.cpp
codeforces/data_structures/: README.md  troynacci.py
contests/2017-world-finals/: needforspeed.cpp
contests/ieeextreme/: aeneas.cpp  elementary.cpp  fibonacci.cpp  gameoflife.cpp  generator.cpp  lifeoriginal.cpp  maxsum.cpp  quipu.cpp  stairs.cpp  stairs.py
contests/pucp2017-2-31312/: wastedtime.cpp
contests/pucp2017-3-31420/: 2dsort.cpp  CMakeLists.txt  andyfirstdictionary.cpp  andyseconddictionary.cpp  cds.cpp  figureful.cpp  neruban.cpp  parentheses.cpp  teamqueue.cpp
contests/pucp20172-31312/: beautifulset.cpp  binary.cpp  capitalization.cpp  card.cpp  easynumber.cpp  foursegments.cpp  kingdom.cpp  magicsquare.cpp  marbles.cpp  palindromic.cpp  parallelepiped.cpp  quiz.cpp  word.cpp
halim/chapter1/: CMakeLists.txt  carbuyer.cpp  costcutting.cpp  nlogonia.cpp  texquotes.cpp
pucp/pucp2017-2-31312/: CMakeLists.txt  boygirl.cpp  depression.cpp  educational.cpp  rectangulargame.cpp  shortestking.cpp
pucp/pucp2017-3-31420/: babelfish.cpp  department.cpp  haypoints.cpp  jollyjumpers.cpp  pickcandies.cpp  throwingcards.cpp
pucp/pucp2017-4-31520/: CMakeLists.txt  abteam.cpp  army.cpp  wilbur.cpp
pucp/pucp2017-6-31887/: cubrency.cpp  digitcount.cpp  hanoi.cpp  howdoyouadd.cpp  jackpot.cpp  turtles.cpp
pucp/pucp2017-7-31991/: CMakeLists.txt  archery.cpp  contesthall.cpp  kidslovecandies.cpp  math.cpp  newpresident.cpp  noname.cpp
pucp/vjudge-184008/: fireflowers.cpp  fortress.cpp  polish.cpp  salt.cpp  warsaw.cpp
pucp/vjudge-188894/: a.cpp  x.cpp  y.cpp
pucp/vjudge-196203/: k.cpp
(+10 files in other folders)
