cmake_minimum_required(VERSION 2.7)

# https://a2oj.com/contest?ID=31420
project(contest3)

add_executable(andyseconddictionary andyseconddictionary.cpp)
add_executable(pickcandies pickcandies.cpp)
add_executable(teamqueue teamqueue.cpp)
add_executable(andyfirstdictionary andyfirstdictionary.cpp)
add_executable(neruban neruban.cpp)
add_executable(parentheses parentheses.cpp)
add_executable(2dsort 2dsort.cpp)
add_executable(throwingcards throwingcards.cpp)
add_executable(department department.cpp)
add_executable(jollyjumpers jollyjumpers.cpp)
add_executable(babelfish babelfish.cpp)
add_executable(figureful figureful.cpp)
add_executable(cds cds.cpp)
add_executable(haypoints haypoints.cpp)
