cmake_minimum_required(VERSION 2.7)

project(contesticpc1)

add_executable(marbles marbles.cpp)
add_executable(rectangulargame rectangulargame.cpp)
add_executable(card card.cpp)
add_executable(boygirl boygirl.cpp)
add_executable(beautifulset beautifulset.cpp)
add_executable(parallelepiped parallelepiped.cpp)
add_executable(capitalization capitalization.cpp)
add_executable(palindromic palindromic.cpp)
add_executable(kingdom kingdom.cpp)
add_executable(binary binary.cpp)
add_executable(word word.cpp)
add_executable(wastedtime wastedtime.cpp)
add_executable(shortestking shortestking.cpp)
add_executable(magicsquare magicsquare.cpp)
add_executable(quiz quiz.cpp)
add_executable(educational educational.cpp)
add_executable(easynumber easynumber.cpp)
add_executable(depression depression.cpp)
add_executable(foursegments foursegments.cpp)